PR30401: Address newer s390 kernels that move struct stack_frame

Linux git commit 78c98f907413 moved struct stack_frame
<asm/processor.h> to a newly created <asm/stacktrace.h>.  As a result
the struct definition does not get pulled in by the existing
<asm/ptrace.h> include for the newer kernels.  Have a autoconf test to
determine whether the <asm/stacktrace.h> exists and uses it if it
avaialble.